--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "modulo-7-layout",
   "version": "1.0.0",
   "description": "",
-  "main": "gitignore.js",
+  "main": "index.js",
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.9"
+  },
+  "devDependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,11 +24,5 @@
   "bugs": {
     "url": "https://github.com/cristianoMelo86/modulo-7-layout/issues"
   },
-  "homepage": "https://github.com/cristianoMelo86/modulo-7-layout#readme",
-  "devDependencies": {},
-  "dependencies": {
-    "bootstrap": "^4.0.0-beta.2",
-    "jquery": "^3.2.1",
-    "popper.js": "^1.12.9"
-  }
+  "homepage": "https://github.com/cristianoMelo86/modulo-7-layout#readme"
 }
